# k-meld

./: README.md
analyzer/: .gitignore  Makefile  kmeld_runner.py  pattern_match.py  seq-miner-wrapper.py
analyzer/run/: calleesFoiLastUseMap.txt  foi.txt  potentialFOIs.txt  releaseTerminals.txt
analyzer/run/bc_files/: inode.bc  irqdomain.bc  kcov.bc  kprobes.bc  matrix.bc  msi.bc  relay.bc  rpmsg_char.bc  tun.bc
analyzer/src/: CMakeLists.txt
analyzer/src/lib/: CMakeLists.txt  Common.cc  Common.h  CriticalFunc.cc  CriticalFunc.h  Kmeld.cc  Kmeld.h  ws.code-workspace
llvm-8.0.0/: build-llvm.sh
llvm-8.0.0/llvm/tools/clang/: changes.txt  disableInline.txt
llvm-8.0.0/llvm/tools/clang/lib/CodeGen/: CGCall.cpp  CGCall.cpp--noInline  CodeGenModule.cpp  CodeGenModule.cpp--noInline
llvm-8.0.0/llvm/tools/clang/lib/Frontend/: CompilerInvocation.cpp  CompilerInvocation.cpp--noInline
llvm-8.0.0/llvm/tools/clang/www/: cxx_dr_status.html  cxx_status.html
results/: FOIs.txt
